<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context=".Account.MainActivity">
    <ImageView
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:src="@drawable/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <android.support.design.widget.TextInputLayout
        style="@style/MYTextInputLayout">
    <EditText
        android:id="@+id/phone_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number_user"
        android:hint="@string/phone_number"
        android:inputType="phone"
        />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/MYTextInputLayout">
    <EditText
        android:id="@+id/edit_first_name"
        android:inputType="textPersonName"
        android:hint="@string/name"
        style="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        style="@style/MYTextInputLayout">
    <EditText
        android:id="@+id/edit_last_name"
        android:inputType="textPersonName"
        android:hint="@string/last_name"
        style="@style/MyEditText"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.v7.widget.AppCompatButton
        android:gravity="center"
        android:layout_gravity="bottom"
        android:id="@+id/register"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_background"
        android:text="@string/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>